# scope-guard

./: CMakeLists.txt  LICENSE  README.md
include/: scope_exit
src/: main_scope_exit.cc
